--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.6",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5"
   },
