--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
